--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "parser": "@babel/eslint-parser",
     "rules": {
+      "no-plusplus": 0,
       "no-restricted-syntax": ["error", "LabeledStatement", "WithStatement"],
       "linebreak-style": 0,
       "no-console": ["error", { "allow": ["warn", "error", "log"] }],
